--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -86,10 +86,10 @@
                   </li>
                   <li class="relative group">
                     <a
-                      href="#team"
+                      href="products"
                       class="flex py-2 mx-8 text-base font-medium ud-menu-scroll text-dark group-hover:text-primary dark:text-white lg:ml-7 lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10"
                     >
-                      Team
+                      Products
                     </a>
                   </li>
                   <li class="relative group">
